<resources>
    <string name="app_name">Buzzapp</string>
    <string name="signInText"> to  meet up with family, friends ...</string>
    <string name="dummyinstructions">The Android Emulator installs and starts your apps faster than a real device and allows you to prototype and test your app on various Android device configurations: phones, tablets, Android Wear, and Android TV devices. You can also simulate a variety of hardware features such as GPS location, network latency, motion sensors, and multi-touch input.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="all_open_channels">Open Channels</string>
    <string name="fb_app_id">474793396343128</string>
    <string name="account_kit_client_token">bea476ea090bfcf0e8ebd6b7ee5ca3f4</string>
    <string name="ak_protocol_login_scheme">akbea476ea090bfcf0e8ebd6b7ee5ca3f4</string>
    <string name="at">"@"</string>
    <string name="privacy_settings">Privacy &amp; settings</string>
    <string name="terms_and_conditiions">Terms &amp; Conditions</string>
    <string name="sign_uptext">"By signing up, you agree to Buzzapp"</string>
    <string name="terms_and_cond">"Terms &amp; conditions-Description comes here if any"</string>
    <string name="crash_toast_text">crash</string>
    <string-array name="Country">
        <item>India</item>
        <item>Afghanistan</item>
        <item>China</item>
        <item>Bangladesh</item>
        <item>Bahrain</item>
        <item>Azerbaijan</item>
        <item>Bhutan</item>
        <item>Georgia</item>
    </string-array>
    <string-array name="City">
        <item>Kabul</item>
        <item>Yerevan</item>
        <item>Dhaka</item>
        <item>Hong Kong</item>
        <item>Beijing</item>
        <item>Uranus</item>
        <item>Tbilisi</item>
    </string-array>
    <string name="title_activity_user_navgation">UserNavgation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="forgot_text">Enter your info to reset Sign in details</string>
    <string name="forgot_text1">"Enter Your Mobile no / Email ID"</string>
    <string name="forgot_tc">"By resetting your details, you agree to buzzapp's"</string>
    <string name="question_mark">\?</string>
    <string name="file_thumbnail">File Thumbnail</string>
    <string name="open_camera">Open Camera</string>
    <string name="done">Done</string>
    <string name="selection_count">%1$d/%2$d</string>
    <string name="permission_not_given">Permission not given</string>
    <string name="path">Path : %1$s</string>
    <string name="size">Size :  %1$d</string>
    <string name="mime">Mime: %1$s</string>
    <string name="type">Type : %1$d</string>
    <string name="name">Name : %1$s</string>
    <string name="bucketname">BucketName : %1$s</string>
    <string name="launch_audio_picker">Launch audio picker</string>
    <string name="launch_video_picker">Launch video picker</string>
    <string name="launch_image_picker">Launch image picker</string>
    <string name="share_log">Share Log</string>
    <string name="group_channel_list_file_message_text">%1$s has uploaded a file.</string>
    <string name="create_group_channel">Create Group Channel</string>
    <string name="member_list">Members</string>
    <string name="invite_member">Invite members</string>
    <string name="member_info"></string>
    <string name="open_channel_chat_content_desc_profile">Profile image</string>
    <string name="action_create_channel">Create channel</string>
    <string name="download">Download</string>
    <string name="cancel">Cancel</string>
    <string name="upload">Upload</string>
    <string name="resend_message">Resend</string>
    <string name="delete_message">Delete</string>
    <string name="message_sending">Sending</string>
    <string name="message_failed">Failed</string>
    <string name="open_channel_list_participant_count">%1$d participants</string>
    <string name="create_open_channel">Create Open Channel</string>
    <string name="participant_list">Participants</string>
    <string name="title_activity_main3">Main3Activity</string>
    <string name="title_activity_maps">Map</string>
    <string name="current_version">0.9.1</string>
    <string name="splash_app_title">Video &amp; Audio \nChat Sample</string>
    <string name="splash_create_session_error">Create session errors:</string>
    <string name="dlg_signal_error">Disconnected… Please check your Internet connection!</string>
    <string name="dlg_login">Login…</string>
    <string name="dlg_sign_in">Sign in…</string>
    <string name="dlg_updating_user">Updating user…</string>
    <string name="dlg_creating_new_user">Creating new user…</string>
    <string name="dlg_logout">Logout…</string>
    <string name="dlg_loading_opponents">Loading opponents…</string>
    <string name="error_max_opponents_count">You can select up to %d opponents</string>
    <string name="sign_up_error">Error creating new user, please try again</string>
    <string name="sign_in_error_with_error">Sign in error. Error</string>
    <string name="sign_in_error_without_error">Sign in error</string>
    <string name="logout_user_with_error">Logout user error. Error</string>
    <string name="error_empty_login">Login can not be empty</string>
    <string name="error_empty_chat_room_name">Chat room name can not be empty</string>
    <string name="login_chat_login_error">Login Chat error. Please relogin. Error</string>
    <string name="update_user_error">Update user error. Error</string>
    <string name="loading_users_error">Loading users error. Error</string>
    <string name="permission_unavailable">%s is not available now!</string>
    <string name="field_name_user_name">User name</string>
    <string name="field_name_chat_room_name">Chat room name</string>
    <string name="error_name_must_not_contain_special_characters_from_app">%1$s must contain 3 &#8212; %2$s alphanumeric Latin characters without space, the first char must be a letter</string>
    <string name="action_start_login">Done</string>
    <string name="action_screen_share">Screen share</string>
    <string name="action_update_opponens_list">Update opponents list</string>
    <string name="action_logout">Logout</string>
    <string name="action_start_video_call">Video call</string>
    <string name="action_start_audio_call">Audio call</string>
    <string name="actionbar_title_settings">Settings</string>
    <string name="title_login_activity">Enter to chat</string>
    <string name="subtitle_text_logged_in_as">Logged in as %s</string>
    <string name="title_one_user_selected">%s user selected</string>
    <string name="tile_many_users_selected">%s users selected</string>
    <string name="incoming_call">Incoming Call</string>
    <string name="also_on_call">Also on call:</string>
    <string name="edit_opponents_list">Edit opponents list</string>
    <string name="incoming_audio_call">Incoming Audio Call</string>
    <string name="incoming_video_call">Incoming Video Call</string>
    <string name="outgoing_audio_video_call_title">%s\n\nRinging</string>
    <string name="user_list_on_call">User 1, User 2, User 3, User 4, User 5, User 6</string>
    <string name="opponent_pending">Pending</string>
    <string name="opponent_closed">Closed</string>
    <string name="text_incoming_audio_call">Incoming Audio Call</string>
    <string name="text_incoming_video_call">Incoming Video Call</string>
    <string name="text_status_connect">Connect…</string>
    <string name="text_status_checking">Checking…</string>
    <string name="text_status_connected">Connected</string>
    <string name="text_status_disconnected">Disconnected</string>
    <string name="text_status_rejected">Rejected</string>
    <string name="text_status_no_answer">No answer</string>
    <string name="text_status_hang_up">Hung up</string>
    <string name="text_status_closed">Closed</string>
    <string name="text_status_time_out">Time Out</string>
    <string name="text_status_failed">Failed</string>
    <string name="text_welcoming_message">Please enter username and chat room name. \nYou can join existed chat room.</string>
    <string name="hint_user_name">User name</string>
    <string name="hint_chat_room_name">Chat room name</string>
    <string name="text_select_user_to_call">Select users you want to call</string>
    <string name="call_was_stopped_connection_lost">Call was stopped because connection was lost</string>
    <string name="connection_lost">Connection lost</string>
    <string name="text_push_notification_message">"%s is calling you"</string>
    <string name="title_video_category">Video</string>
    <string name="title_call_settings_category">Call Settings</string>
    <string name="pref_default_value">Default</string>
    <string name="pref_default_camera_key">default_camera_preference</string>
    <string name="pref_default_camera_title">Default Camera</string>
    <string name="pref_default_camera_dlg">Select default camera</string>
    <string name="pref_default_camera_default">0</string>
    <string name="pref_frame_rate_key">frame_rate</string>
    <string name="pref_frame_rate_title">Frame Rate (0&#8211;30)</string>
    <string name="pref_frame_rate_default">0</string>
    <string name="pref_resolution_key">resolution_preference</string>
    <string name="pref_resolution_title">Video Format</string>
    <string name="pref_resolution_dlg">Enter RTC local video resolution</string>
    <string name="pref_resolution_default">-1</string>
    <string name="pref_startbitrate_key">startbitrate_preference</string>
    <string name="pref_startbitrate_title">Start bitrate setting</string>
    <string name="pref_startbitrate_dlg">Start bitrate setting</string>
    <string name="pref_startbitrate_default">Default</string>
    <string name="pref_startbitratevalue_key">startbitratevalue_preference</string>
    <string name="pref_startbitratevalue_title">Bandwidth (0&#8211;2000)</string>
    <string name="pref_startbitratevalue_default">0</string>
    <string name="pref_disable_built_in_aec_key">disable_built_in_aec_preference</string>
    <string name="pref_disable_built_in_aec_title">Disable built-in AEC</string>
    <string name="pref_disable_built_in_aec_dlg">Disable built-in AEC</string>
    <string name="pref_disable_built_in_aec_default">false</string>
    <string name="pref_built_in_aec_not_available">Built-in AEC is not available</string>
    <string name="pref_opensles_key">opensles_preference</string>
    <string name="pref_opensles_title">Use OpenSL ES for audio playback</string>
    <string name="pref_opensles_dlg">Use OpenSL ES for audio playback</string>
    <string name="pref_opensles_default">false</string>
    <string name="pref_noaudioprocessing_key">audioprocessing_preference</string>
    <string name="pref_noaudioprocessing_title">Disable audio processing</string>
    <string name="pref_noaudioprocessing_dlg">Disable audio processing pipeline</string>
    <string name="pref_noaudioprocessing_default">false</string>
    <string name="pref_answer_time_interval_key">answer_time_interval</string>
    <string name="pref_answer_time_interval_title">Answer Time Interval (15&#8211;90s)</string>
    <string name="pref_answer_time_interval_default_value">60</string>
    <string name="pref_disconnect_time_interval_key">disconnect_time_interval</string>
    <string name="pref_disconnect_time_interval_title">Disconnect Time Interval (10&#8211;90s)</string>
    <string name="pref_disconnect_time_interval_default_value">10</string>
    <string name="pref_dialing_time_interval_key">Dialing_time_interval</string>
</resources>