<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_view_login_activity"
    style="@style/MatchParent"
    android:layout_marginLeft="@dimen/padding_start"
    android:orientation="vertical"
    tools:context=".VideoCall.activities.LoginActivity">

    <TextView
        style="@style/MatchWidth"
        android:paddingTop="@dimen/padding_actionbar"
        android:text="@string/text_welcoming_message" />

    <EditText
        android:id="@+id/user_name"
        style="@style/MatchWidth"
        android:hint="@string/hint_user_name"
        android:paddingTop="@dimen/padding_top"
        android:singleLine="true"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/chat_room_name"
        style="@style/MatchWidth"
        android:hint="@string/hint_chat_room_name"
        android:paddingTop="@dimen/padding_top"
        android:singleLine="true"
        android:textSize="16sp" />

    <Button
        android:id="@+id/log"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="login" />

</LinearLayout>