<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".LoginRegistrationActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="3dp">

        <LinearLayout
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginTop="35dp"
                android:background="@drawable/app_buzz_logo" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="Forgot My Details"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="16dp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <View

                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:background="@color/light_pink_col" />

                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/forgot_text"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="14sp" />

            </LinearLayout>


            <FrameLayout

                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="50dp"
                android:background="@drawable/toggle_bacground_shape">

                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/toggle_bacground_shape">


                    <Button
                        android:id="@+id/button_secret_id"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_centerVertical="true"
                        android:layout_margin="2dp"
                        android:layout_weight="1"
                        android:background="@drawable/signin_button"
                        android:text="Buzz ID"
                        android:textAllCaps="false"
                        android:textColor="@android:color/black" />

                    <Button

                        android:id="@+id/button_passkey"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_centerVertical="true"
                        android:layout_margin="2dp"
                        android:layout_weight="1"
                        android:background="@drawable/signin_button_voilet"
                        android:text="Passkey"
                        android:textAllCaps="false"
                        android:textColor="@android:color/white" />
                </LinearLayout>
            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35dp"

                android:layout_marginTop="40dp"
                android:layout_marginRight="35dp"
                android:orientation="vertical">

                <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:tools="http://schemas.android.com/tools"
                    android:id="@+id/relative_layout_mobile_or_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginBottom="10dp"
                    tools:context="com.android_examples.com.edittextunderlinecolorchange.MainActivity">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />


                    <EditText
                        android:id="@+id/et_buzz_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_toRightOf="@+id/user_logo_"
                        android:background="@null"
                        android:ems="10"
                        android:hint="Buzz Id"
                        android:singleLine="true"
                        android:textColor="@android:color/white"
                        android:textColorHint="@android:color/white"
                        android:textSize="16sp">

                    </EditText>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_below="@+id/et_buzz_id"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="5dp"
                        android:background="@color/light_pink_col" />

                </RelativeLayout>

                <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:tools="http://schemas.android.com/tools"
                    android:id="@+id/relative_layout_passkey"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:context="com.android_examples.com.edittextunderlinecolorchange.MainActivity">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />


                    <EditText
                        android:id="@+id/passkey"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_toRightOf="@+id/user_logo_"
                        android:background="@null"
                        android:ems="10"
                        android:hint="@string/forgot_text1"
                        android:textColor="@android:color/white"
                        android:textColorHint="@android:color/white"
                        android:textSize="16sp">

                    </EditText>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_below="@+id/passkey"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="5dp"
                        android:background="@color/light_pink_col" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp">


                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_centerVertical="true"
                        android:layout_marginTop="5dp">

                        <TextView
                            android:id="@+id/pass_key"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_gravity="center"
                            android:background="@null"
                            android:hint="Enter your Security code"
                            android:textColor="@android:color/white"
                            android:textColorHint="@android:color/white"
                            android:textSize="12sp"
                            android:visibility="visible">

                        </TextView>

                        <Spinner

                            android:id="@+id/alphabets_spinner_forgorpassword"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentTop="true"
                            android:layout_gravity="center"
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="0dp"
                            android:layout_toRightOf="@+id/pass_key"
                            android:backgroundTint="@color/color_white"
                            android:padding="5dp"
                            android:spinnerMode="dropdown"
                            android:textAlignment="center" />


                        <Spinner
                            android:id="@+id/alphabets_spinner_numeric_code"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentTop="true"
                            android:layout_gravity="center"
                            android:layout_marginTop="0dp"
                            android:layout_toLeftOf="@+id/question_mark_hint"
                            android:backgroundTint="@color/color_white"
                            android:padding="5dp"
                            android:spinnerMode="dropdown"
                            android:textAlignment="center" />


                        <ImageView
                            android:id="@+id/question_mark_hint"
                            android:layout_width="16dp"
                            android:layout_height="16dp"
                            android:layout_alignParentRight="true"
                            android:background="@drawable/question_sign"
                            android:gravity="right" />


                    </RelativeLayout>


                </RelativeLayout>


            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35dp"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">

                <Button


                    android:id="@+id/reset_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:background="@drawable/signin_shape"
                    android:minHeight="30dp"
                    android:text="Reset"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white" />

            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:text="@string/forgot_tc"
                android:textAlignment="center"
                android:textColor="@color/color_white"
                android:textSize="12sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Privacy policies"
                        android:textColor="@color/app_color_pink"
                        android:textSize="12sp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="2dp"
                        android:background="@color/app_color_pink" />

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:text="and"
                    android:textColor="@color/color_white" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/terms_and_conditiions"
                        android:textColor="@color/app_color_pink"
                        android:textSize="12sp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="2dp"
                        android:background="@color/app_color_pink" />

                </LinearLayout>

            </LinearLayout>


        </LinearLayout>


    </ScrollView>


</RelativeLayout>